--- a/scss/layout/_layout-banner.scss
+++ b/scss/layout/_layout-banner.scss
@@ -2,3 +2,7 @@
 /* ==========================================================================
    #SITE-HEAD
    ========================================================================== */
+
+.page-head {
+	margin-bottom: $vertical-spacing;
+}
