--- a/scss/elements/_type-heading.scss
+++ b/scss/elements/_type-heading.scss
@@ -16,22 +16,9 @@ h6 {
 	color: $heading-font-color;
 	font-family: $heading-font-family;
 	font-weight: normal;
-	line-height: 1;
+	line-height: .95;
 	margin: 0 0 $vertical-spacing;
 	text-transform: uppercase;
-	
-	.band--dark & {
-		color: $white;
-	}
-}
-
-.oversize {
-	@include font-size(125);
-	line-height: 1;
-	
-	@include bp(bp4) {
-		@include font-size(150);
-	}
 }
 
 h1 { 
