--- a/css/main.css
+++ b/css/main.css
@@ -479,7 +479,6 @@ p {
   color: #b1b6b7;
   font-size: 20px;
   font-size: 2rem;
-  font-style: italic;
   /* [1] */
   /* [2] */
   /* [3] */
@@ -700,8 +699,7 @@ blockquote {
   /* [2] */
   min-height: 100vh;
   /* [3] */
-  opacity: 0;
-  padding: 20px 20px; }
+  opacity: 0; }
   .pace-done .page {
     opacity: 1;
     /* [4] */
@@ -742,7 +740,13 @@ blockquote {
    #SITE-HEAD
    ========================================================================== */
 .page-head {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  padding: 20px 20px; }
+
+.page-head__home-link {
+  border: none;
+  display: block;
+  float: left; }
 
 /* ==========================================================================
    #FOOTER
