--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,8 +23,9 @@ $grey-light						: rgb(177,182,183);
 $grey-lighter					: rgb(238,240,240);
 
 
-$color-primary 					: rgb(86,218,215);
-
+$color-primary 					: rgb(86,218,215); // Turquoise
+$color-primary 					: rgb(232,5,86); // Red/pink
+$color-primary 					: rgb(24,172,172); // Turquoise v2
 
 
 
